--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,8 @@ html {
 
 body {
   background: var(--backgroundColor);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: var(--textColor);
@@ -140,11 +140,12 @@ ul {
   border: transparent;
   border-radius: var(--borderRadius);
   letter-spacing: var(--letterSpacing);
-  padding: 0.375rem 0.75rem;
+  padding: 1.175rem 0.75rem;
   box-shadow: var(--shadow-1);
   transition: var(--transition);
-  text-transform: capitalize;
+  text-transform: uppercase;
   display: inline-block;
+  font-size: 1.5rem;
 }
 .btn:hover {
   background: var(--primary-700);
@@ -311,7 +312,7 @@ main {
 .delete-btn {
   background: transparent;
   border: transparent;
-  text-transform: capitalize;
+  text-transform: uppercase;
   cursor: pointer;
 }
 .info-btn {
